This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

17-Mar-2002 (Lars Duening)  (3.3.423)
  - (mapping.c) Removed a memory leak.

15-Mar-2002 (Lars Duening)  (3.3.422)
  - (gcollect.c) The NEW_CLEANUP code treated the driver hooks like other
      svalues, which was bad because it caused lambda-closure hooks bound
      to destructed objects to disappear. Since these closures can be re-bound
      on the fly, the cleanup code now does exactly that (reported by
      Nostradamus and Bardioc).

14-Mar-2002 (Lars Duening)  (3.3.421)
  - (driver.h, smalloc.c) Removed a build problem when MALLOC_CHECK
      was not defined, but MALLOC_TRACE was (reported by Nostradamus).

13-Mar-2002 (Lars Duening)  (3.3.420)
  - (xalloc.c, smalloc.c, configure) New configuration option
      '--enable-malloc-sbrk' to selectively allow the memory allocator to use
      sbrk() instead of malloc() where available (default is to allow sbrk()).
      The idea is to circumvent limitations some system put on sbrk().
      (suggested by Tomba)

12-Mar-2002 (Lars Duening)  (3.3.419)
  - (mapping.c, gcollect.c) The mapping GC forgot to mark the map-chain
       blocks as referenced (reported by Bardioc).

11-Mar-2002 (Lars Duening)  (3.3.418)
  - (structs.c) Removed a crasher caused by two uninitialized variables.
  - (mappings, gcollect.c) The GC can now collect mappings with hash
       parts.
  - (ptmalloc.c) More locking code - these should cover almost all
       cases (thanks, Gawain).

10-Mar-2002 (Lars Duening)  (3.3.417)
  - (prolang.y) Corrected the error handling when a struct member was
       duplicated and clashed with an inherited member (reported by
       Guandalug).
  - (prolang.y, structs, hash, efuns.c, interpret.c, sprintf.c)
       When a struct-defining program is recompiled, the compiler
       tries to reactivate the struct type objects if possible.
