@@ -2,9 +2,8 @@ SYNOPSIS
         string *parse_command_adjectiv_id_list(void)
 
 DESCRIPTION
-        Return all adjectives associated with this object.
-
-        Used by parse_command().
+        Used by parse_command(). Return an array of common
+        adjectives in the installations native language.
 
 EXAMPLE
         string * parse_command_adjectiv_id_list() {
