@@ -111,6 +111,7 @@ AC_MY_ARG_ENABLE(access-log,no,,)
 AC_MY_ARG_ENABLE(align-functions,yes,,)
 AC_MY_ARG_ENABLE(compat-mode,no,,)
 AC_MY_ARG_ENABLE(strict-euids,no,,)
+AC_MY_ARG_ENABLE(filename-spaces,no,,[Allow space characters in filenames])
 AC_MY_ARG_ENABLE(share-variables,no,,[Enable clone initialization from blueprint variable values])
 AC_MY_ARG_ENABLE(use-system-crypt,yes,,)
 AC_MY_ARG_ENABLE(udp-send,yes,,)
@@ -263,6 +264,7 @@ AC_CDEF_FROM_ENABLE(access_control)
 AC_CDEF_FROM_ENABLE(access_log)
 AC_CDEF_FROM_ENABLE(compat_mode)
 AC_CDEF_FROM_ENABLE(strict_euids)
+AC_CDEF_FROM_ENABLE(filename_spaces)
 AC_CDEF_FROM_ENABLE(share_variables)
 AC_CDEF_FROM_ENABLE(use_system_crypt)
 AC_CDEF_FROM_ENABLE(use_alists)
@@ -1901,6 +1903,7 @@ AC_SUBST(cdef_access_control)
 AC_SUBST(cdef_access_log)
 AC_SUBST(cdef_compat_mode)
 AC_SUBST(cdef_strict_euids)
+AC_SUBST(cdef_filename_spaces)
 AC_SUBST(cdef_share_variables)
 AC_SUBST(cdef_use_system_crypt)
 AC_SUBST(cdef_use_ipv6)
