@@ -4,7 +4,7 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
-26-Jan-2003 (Lars Duening) -- Development Release 3.3
+17-Mar-2003 (Lars Duening) -- Development Release 3.3
 
     - Changed efuns:
        + Removed obsolete and deprecated efuns: add_verb(), add_xverb(),
@@ -81,6 +81,8 @@ For a detailed list of all changes see the file CHANGELOG.
            a pre-program basis to initialize the variables of clone
            from the current values of the corresponding variables in
            the blueprint.
+       + Preprocessor symbol __FILENAME_SPACES__ is defined if the driver is
+           instructed to allow spaces in filenames.
 
     - Runtime:
        + Revamped the string handling to use refcounted strings everywhere.
@@ -113,6 +115,9 @@ For a detailed list of all changes see the file CHANGELOG.
        + New configuration option '--enable-malloc-sbrk' to selectively allow
            the memory allocator to use sbrk() instead of malloc() where
            available (default is to allow sbrk()).
+       + New commandline option '--filename-spaces'/'--no-filename-spaces'
+           to allow or disallow space characters in filenames (default is to
+           disallow them).
 
 
 07-Mar-2003 (Lars Duening) -- Release 3.2.10
